default input added to form elements

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -6,4 +6,5 @@ html(lang="en")
         title Form Elements
     body
         .form-elements
-            .form-elements__item some input
+            include ../../components/input-default/input-default
+            +input('text field', 'Email', 'default', 'email-kit')
