--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -1,6 +1,16 @@
-.form-elements {
-  color: blue;
-  &__item {
-    color: #3D4975;
-  }
+@import '../../components/input-default/input-default.scss';
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
+  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
+  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
+  font-weight: 700;
+  font-style: normal;
 }
