--- a/src/components/footer-ipad/footer-ipad.pug
+++ b/src/components/footer-ipad/footer-ipad.pug
@@ -3,6 +3,7 @@
         .footer-ipad__logo
             img(src="images/logo-color.svg", alt="")
         .footer-ipad__text Copyright © 2018 Toxin отель. Все права зачищены.
+        .footer-ipad__item item
         .footer-ipad__social
             a(href="#")
                 img(src="images/twitter.png", alt="twitter")
