--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -8,3 +8,18 @@ html(lang="en")
         .form-elements
             include ../../components/input-default/input-default
             +input('text field', 'Email', 'default', 'email-kit')
+            //- .ui-kit__grid-item-1
+                //- +sample-form('Text field', 'Default')
+                //-   +input()(type='email', placeholder='Email')
+                //- +sample-form('Text field', 'Hover / Focus')
+                //-   +input()(class='input_active', value='This is pretty awesome')
+                //- +sample-form('Dropdown', 'Default')
+                //-   +dropdown('', 'guests')
+                //- +sample-form('Masked text field', 'Default')
+                //-   +input('date')
+                //- +sample-form
+                //-   +date-picker('double', 'Date dropdown', 'Date dropdown')
+                //- +sample-form
+                //-   +date-picker('single', 'Filter date dropdown')
+                //- +sample-form('Subscription text field')
+                //-   +subscription
