--- a/src/pages/colors-type/colors-type.pug
+++ b/src/pages/colors-type/colors-type.pug
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Colors Type
-    body
-        .colors-type
-            .colors-type__logo
-                img(src="./images/logo-bw.svg", alt="logo")
-            .colors-type__content
-                include ../../components/palette/palette
-                include ../../components/text-type/text-type
+extends ../../templates/ui-kit.pug
+
+block title
+    title Colors Type
