--- a/src/pages/colors-type/colors-type.scss
+++ b/src/pages/colors-type/colors-type.scss
@@ -1,21 +1,8 @@
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
-  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
-  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
-  font-weight: 700;
-  font-style: normal;
-}
-
+@import "../../fonts/Montserrat/montserrat.css";
+@import "../../fonts/material-icons/material-icons.css";
 @import "../../components/palette/palette";
 @import "../../components/text-type/text-type";
+
 
 
 .colors-type {
