--- a/src/templates/ui-kit.pug
+++ b/src/templates/ui-kit.pug
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         block title
-        //- title Colors Type
     body
-        .colors-type
-            .colors-type__logo
-                img(src="./images/logo-bw.svg", alt="logo")
-            .colors-type__content
-                include ../components/palette/palette
-                include ../components/text-type/text-type
+        .logo
+            include ../images/logo-bw.svg
+        block content
+        
