--- a/src/components/text-type/text-type.pug
+++ b/src/components/text-type/text-type.pug
@@ -1,17 +1,7 @@
-.font
-    .font__block.font__block_h1
-        .font__name H1
-        .font__example
-            | This one is the sub-section or <br>
-            | widget title
-    .font__block.font__block_h2
-        .font__name H2
-        .font__example Next one is the item title inside widgets
-    .font__block.font__block_h3
-        .font__name H3
-        .font__example This is a label or CTA text
-    .font__block.font__block_body
-        .font__name Body
-        .font__example
-            | This is the body text which is used for most <br>
-            | of the design, like paragraphs, lists, etc.
+mixin text-type(data)
+    .font
+        each i in data
+            - const {classModifier, name, text} = i
+            div(class=`font__block font__block_${classModifier}`)
+                .font__name= name
+                .font__example= text
