--- a/src/pages/colors-type/colors-type.scss
+++ b/src/pages/colors-type/colors-type.scss
@@ -1,25 +1,15 @@
 @import "../../fonts/Montserrat/montserrat.css";
 @import "../../fonts/material-icons/material-icons.css";
+@import "../../templates/ui-kit.scss";
 @import "../../components/palette/palette";
 @import "../../components/text-type/text-type";
-
-
 
 .colors-type {
   max-width: 1440px;
   min-width: 320px;
-  margin: 0 auto;
-  &__logo {
-    margin: 20px;
-    width: 50px;
-    height: 50px;
-  }
-  &__content {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1147px;
-    min-width: 320px;
-    margin: 65px 140px 0;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  max-width: 1147px;
+  min-width: 320px;
+  margin: 145px 0 0 142px;  
 }
