--- a/src/components/palette/palette.scss
+++ b/src/components/palette/palette.scss
@@ -1,4 +1,3 @@
-
 .palette {
   &__data {
     margin-bottom: 20px;
@@ -11,25 +10,25 @@
     border-radius: 6px;
     margin-right: 40px;
     &_dark100 {
-      background: #1F2041;
+      background: $dark100;
     }
     &_dark75 {
-      background: rgba(31, 32, 65, 0.75);
+      background: $dark75;
     }
     &_dark50 {
-      background: rgba(31, 32, 65, 0.5);
+      background: $dark50;
     }
     &_dark25 {
-      background: rgba(31, 32, 65, 0.25);
+      background: $dark25;
     }
     &_dark5 {
-      background: rgba(31, 32, 65, 0.05);
+      background: $dark5;
     }
     &_purple {
-      background: #BC9CFF;
+      background: $purple;
     }
     &_green {
-      background: #6FCF97;
+      background: $green;
     }
   }
   &__text {
@@ -38,7 +37,7 @@
       weight: 700;
       size: 19px;
     }
-    color: #1F2041;
+    color: $dark100;
     line-height: 29px;
 
   }
