classes rename, submenu added

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,9 +1,9 @@
-.header {
-    display: flex;
-    &__navigation {
-        display: flex;
-    }
-    &__auth {
-        display: flex;
-    }
-}
+// .header {
+//     display: flex;
+//     &__navigation {
+//         display: flex;
+//     }
+//     &__auth {
+//         display: flex;
+//     }
+// }
