--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -13,11 +13,11 @@ block content
                 isAuth: false,
                 userName,
                 navigation: [
-                    {text: "О нас", link: "#"},
-                    {text: "Услуги", link: "#"},
-                    {text: "Вакансии", link: "#"},
-                    {text: "Новости", link: "#"},
-                    {text: "Соглашения", link: "#"},
+                    {text: "О нас", link: "#", isExpanded: false},
+                    {text: "Услуги", link: "#", isExpanded: true},
+                    {text: "Вакансии", link: "#", isExpanded: false},
+                    {text: "Новости", link: "#", isExpanded: true},
+                    {text: "Соглашения", link: "#", isExpanded: false},
                 ],
                 signIn: {
                     text: "Войти",
