--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,49 +1,59 @@
-@import '../../components/header-regular/header-regular';
-@import '../../components/header-designer/header-designer';
-@import '../../components/footer-regular/footer-regular.scss';
-@import '../../components/footer-ipad/footer-ipad.scss';
+@import "../../common-styles/fonts.css";
+@import "../../common-styles/variables.scss";
+@import "../../templates/ui-kit.scss";
+@import "../../components/header/header.scss";
+@import "../../components/navigation/navigation.scss"
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
-  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
-  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
-  font-weight: 700;
-  font-style: normal;
-}
 
-.headers-footers{
-  background-color: rgba($color: gray, $alpha: 0.2);
-  max-width: 1440px;
-  min-width: 320px;
-  min-height: 100vh;
-  margin: 0 auto;
-  &__logo {
-    width: 50px;
-    height: 50px;
-    margin: 20px;
-  }
-}
-.header {
-  &__regular {
-    margin-bottom: 40px;
-  }
-  &__designer {
-    margin-bottom: 40px;
-  }
-}
-.footer {
-  &__regular {
-    margin-bottom: 40px;
-  }
-  &__ipad {
-    margin-bottom: 150px;
-  }
-}
+
+
+// @import '../../components/header-regular/header-regular';
+// @import '../../components/header-designer/header-designer';
+// @import '../../components/footer-regular/footer-regular.scss';
+// @import '../../components/footer-ipad/footer-ipad.scss';
+
+// @font-face {
+//   font-family: 'Montserrat';
+//   src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
+//   src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
+// @font-face {
+//   font-family: 'Montserrat';
+//   src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
+//   src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
+//   font-weight: 700;
+//   font-style: normal;
+// }
+
+// .headers-footers{
+//   background-color: rgba($color: gray, $alpha: 0.2);
+//   max-width: 1440px;
+//   min-width: 320px;
+//   min-height: 100vh;
+//   margin: 0 auto;
+//   &__logo {
+//     width: 50px;
+//     height: 50px;
+//     margin: 20px;
+//   }
+// }
+// .header {
+//   &__regular {
+//     margin-bottom: 40px;
+//   }
+//   &__designer {
+//     margin-bottom: 40px;
+//   }
+// }
+// .footer {
+//   &__regular {
+//     margin-bottom: 40px;
+//   }
+//   &__ipad {
+//     margin-bottom: 150px;
+//   }
+// }
