--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -16,8 +16,8 @@ block content
                     {text: "О нас", link: "#", isExpanded: false},
                     {text: "Услуги", link: "#", isExpanded: true},
                     {text: "Вакансии", link: "#", isExpanded: false},
-                    {text: "Новости", link: "#", isExpanded: true},
-                    {text: "Соглашения", link: "#", isExpanded: false},
+                    {text: "Новости", link: "#", isExpanded: false},
+                    {text: "Соглашения", link: "#", isExpanded: true},
                 ],
                 signIn: {
                     text: "Войти",
