--- a/src/components/navigation/navigation.pug
+++ b/src/components/navigation/navigation.pug
@@ -4,10 +4,8 @@ mixin navigation(list)
             each item in list
                 li.navigation__item
                     if item.isExpanded
-                        .navigation__link.navigation__link_expanded
-                            a(href= item.link)= item.text
+                        a(href= item.link).navigation__link.navigation__link_expanded= item.text
                     else
-                        .navigation__link
-                            a(href= item.link)= item.text
+                        a(href= item.link).navigation__link= item.text
                         
                     
