--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -26,6 +26,7 @@
                 font-family: material-icons;
                 content: 'expand_more';
                 font-size: 24px;
+                margin-top: 2px;
             }
         }
     }
