file structure update

--- a/src/components/header-navigation/header-navigation.pug
+++ b/src/components/header-navigation/header-navigation.pug
@@ -1,29 +1,11 @@
-mixin navigation-menu(name, href)
-    li.navigation__link
-        a(href= href class="navigation__anchor")= name
-mixin navigation-menu-main(name, href)
-    li.navigation__link.navigation__link_main
-        a(href= href class="navigation__anchor")= name
-mixin navigation-menu-sub(name, href)
-    li.navigation__link.navigation__link_sub
-        a(href= href class="navigation__anchor")= name
-        img(src="./images/expand.svg")
-
-mixin navigation-list(isHighlighted)
-    if isHighlighted
-        +navigation-menu-main("о нас", "#")
-    else
-        +navigation-menu("о нас", "#")
-    +navigation-menu-sub("услуги", "#")
-    +navigation-menu("вакансии", "#")
-    +navigation-menu("новости", "#")
-    +navigation-menu-sub("соглашения", "#")
-
-mixin navigation(isHighlighted, isFolded)
-    nav.navigation
-        if isFolded
-            ul.navigation__list.navigation__list_folded
-                +navigation-list(isHighlighted)
-        else
-            ul.navigation__list
-                +navigation-list(isHighlighted)
+mixin header-navigation(list)
+    nav.header-navigation
+        ul.header-navigation__list
+            each item in list
+                li.header-navigation__item
+                    if item.isExpanded
+                        a(href= item.link).header-navigation__link.header-navigation__link_expanded= item.text
+                    else
+                        a(href= item.link).header-navigation__link= item.text
+                        
+                    
