--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Landing page
-    body.landing
-        .landing__header
-            include ../../components/header-regular/header-regular
-            +header(false)
-        .landing__content
-            .landing__info
-                .landing__search
-                    include ../../components/search-room/search-room
-                .landing__tagline лучшие номера для вашей работы, отдыха и просто вдохновения
-        .landing__footer.landing__footer_regular
-            include ../../components/footer-regular/footer-regular
-        .landing__footer.landing__footer_ipad
-            include ../../components/footer-ipad/footer-ipad
+//- <!DOCTYPE html>
+//- html(lang="en")
+//-     head
+//-         meta(charset="UTF-8")
+//-         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+//-         title Landing page
+//-     body.landing
+//-         .landing__header
+//-             include ../../components/header-regular/header-regular
+//-             +header(false)
+//-         .landing__content
+//-             .landing__info
+//-                 .landing__search
+//-                     include ../../components/search-room/search-room
+//-                 .landing__tagline лучшие номера для вашей работы, отдыха и просто вдохновения
+//-         .landing__footer.landing__footer_regular
+//-             include ../../components/footer-regular/footer-regular
+//-         .landing__footer.landing__footer_ipad
+//-             include ../../components/footer-ipad/footer-ipad
         
