--- a/src/components/header-navigation/header-navigation.scss
+++ b/src/components/header-navigation/header-navigation.scss
@@ -1,40 +1,33 @@
-.navigation {
+.header-navigation {
     &__list {
         display: flex;
         justify-content: space-between;
-        width: 443px;
+        align-items: center;
+        width: 445px;
         list-style: none;
-        font-family: Montserrat, sans-serif;
-        font-size: 14px;
-        color:rgba(31, 32, 65, 0.5);
-        white-space: nowrap;
-
-        &_folded {
-            flex-direction: column;
-            text-align: center;
-            padding-left: 0;
-            width: inherit;
-            font-size: 18px;
-            height: 150px;
-        }
     }
     &__link {
+        font-family: Montserrat, sans-serif;
+        font-size: 14px;
+        color: $dark50;
+        text-decoration: none;
+        white-space: nowrap;
         &::first-letter{
             text-transform: uppercase;
         }
-        &_main {
+        &:hover {
             font-weight: bold;
-            color:  rgba(31, 32, 65, 0.75);
+            color: $dark75;
         }
-        &_sub{
-            img {
-                margin-left: 6.5px;
+        &_expanded {
+            display: flex;
+            align-items: center;
+            &::after {
+                font-family: material-icons;
+                content: 'expand_more';
+                font-size: 24px;
+                margin-top: 2px;
             }
         }
     }
-    &__anchor {
-        text-decoration: none;
-        color: inherit;
-    }
 }
-
