--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,7 +5,7 @@ mixin header(data)
             .header__logo
                 include ../../images/logo-color.svg
             .header__navigation
-                +navigation(navigation)
+                +header-navigation(navigation)
             .header__auth
                 if isAuth
                     .header__name= userName
