--- a/src/pages/landing-page/landing-page.scss
+++ b/src/pages/landing-page/landing-page.scss
@@ -1,67 +1,67 @@
-@import '../../components/header-regular/header-regular.scss';
-@import '../../components/footer-regular/footer-regular.scss';
-@import '../../components/footer-ipad/footer-ipad.scss';
-@import '../../components/search-room/search-room.scss';
+// @import '../../components/header-regular/header-regular.scss';
+// @import '../../components/footer-regular/footer-regular.scss';
+// @import '../../components/footer-ipad/footer-ipad.scss';
+// @import '../../components/search-room/search-room.scss';
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
-    src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
+// @font-face {
+//     font-family: 'Montserrat';
+//     src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
+//     src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+//   }
   
-  @font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
-    src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
-    font-weight: 700;
-    font-style: normal;
-  }
+//   @font-face {
+//     font-family: 'Montserrat';
+//     src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
+//     src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
+//     font-weight: 700;
+//     font-style: normal;
+//   }
 
-.landing {
-    max-width: 1440px;
-    min-width: 320px;
-    margin: 0 auto;
-    &__content {
-        height: 830px;
-        background: url('./images/room-image.png') no-repeat;
-        border: 1px solid transparent;
-    }
-    &__info {
-        max-width: 1160px;
-        height: 830px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    &__search {
-        margin-top: 70px;
-    }
-    &__tagline {
-        font-family: Montserrat, sans-serif;
-        font-size: 14px;
-        color: rgba(31, 32, 65, 0.75);
-        max-width: 297px;
-        text-align: right;
-        margin-bottom: 18px;
-        align-self: flex-end;
-        &::first-letter {
-            text-transform: uppercase;
-        }
-    }
-    &__footer {
-        &_regular {
-            @media (max-width: 840px) {
-                display: none;
-            }
-        }
-        &_ipad {
-            display: none;
-            @media (max-width: 840px) {
-                display: block;
-            }
-        }
-    }
-}
+// .landing {
+//     max-width: 1440px;
+//     min-width: 320px;
+//     margin: 0 auto;
+//     &__content {
+//         height: 830px;
+//         background: url('./images/room-image.png') no-repeat;
+//         border: 1px solid transparent;
+//     }
+//     &__info {
+//         max-width: 1160px;
+//         height: 830px;
+//         margin: 0 auto;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//     }
+//     &__search {
+//         margin-top: 70px;
+//     }
+//     &__tagline {
+//         font-family: Montserrat, sans-serif;
+//         font-size: 14px;
+//         color: rgba(31, 32, 65, 0.75);
+//         max-width: 297px;
+//         text-align: right;
+//         margin-bottom: 18px;
+//         align-self: flex-end;
+//         &::first-letter {
+//             text-transform: uppercase;
+//         }
+//     }
+//     &__footer {
+//         &_regular {
+//             @media (max-width: 840px) {
+//                 display: none;
+//             }
+//         }
+//         &_ipad {
+//             display: none;
+//             @media (max-width: 840px) {
+//                 display: block;
+//             }
+//         }
+//     }
+// }
