--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -21,11 +21,13 @@ block content
                 ],
                 signIn: {
                     text: "Войти",
-                    url: "#"
+                    url: "#",
+                    mod: "gradient-border"
                 },
                 signUp: {
                     text: "Зарегистрироваться",
-                    url: "#"
+                    url: "#",
+                    mod: "purple"
                 }
             }
         +header(headerData)
