--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -2,7 +2,8 @@
 @import "../../common-styles/variables.scss";
 @import "../../templates/ui-kit.scss";
 @import "../../components/header/header.scss";
-@import "../../components/header-navigation/header-navigation.scss"
+@import "../../components/header-navigation/header-navigation.scss";
+@import "../../components/button/button.scss";
 
 
 
