headers blocks position fixed

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -10,5 +10,6 @@ mixin header(data)
                 if isAuth
                     .header__name= userName
                 else
-                    +button(signIn)
-                    +button(signUp)
+                    .header__buttons
+                        +button(signIn)
+                        +button(signUp)
