--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -4,6 +4,7 @@
 @import "../../components/header/header.scss";
 @import "../../components/header-navigation/header-navigation.scss";
 @import "../../components/button/button.scss";
+@import "../../components/burger/burger.scss";
 
 
 
