--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,9 @@
 mixin header(data)
     .header
+        - const {isAuth, userName, navigation, signIn, signUp} = data
+        .header__burger 
+            +burger(data)
         .header__content
-            - const {isAuth, userName, navigation, signIn, signUp} = data
             .header__logo
                 include ../../images/logo-color.svg
             .header__navigation
