--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,29 +1,46 @@
 .header {
-    max-width: 1440px;
-    min-width: 320px;
-    height: 70px;
+    min-height: 70px;
     background-color: #ffffff;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    position: relative;
+    &__burger {
+        @media (min-width: 930px) {
+            display: none;
+        }
+    }
     &__content {
-        height: 70px;
         max-width: 1160px;
+        display: flex;
         margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr 10fr 1fr;
-        align-items: center;
+        @media (min-width: 930px) {
+            display: grid;
+            align-items: center;
+            grid-template-columns: 1fr 10fr 1fr;
+        }
     }
     &__navigation{
-        display: flex;
-        justify-content: flex-end;
+        display: none;
+        @media (min-width: 930px) {
+            display: flex;
+            justify-content: flex-end;
+        }        
     }
     &__logo {
+        position: absolute;
+        top: 9px;
         svg {
             display: block;
         }
+        @media (min-width: 930px) {
+            position: inherit;
+        }
     }
     &__auth {
-        display: flex;
-        align-items: center;
+        display: none;
+        @media (min-width: 930px) {
+            display: flex;
+            align-items: center;
+        }     
     }
     &__buttons {
         display: flex;
