--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -2,12 +2,13 @@ extends ../../templates/ui-kit.pug
 include ../../components/header/header.pug
 include ../../components/header-navigation/header-navigation.pug
 include ../../components/button/button.pug
+include ../../components/burger/burger.pug
 
 block title
     title headers & footers
 
 block content
-    .header
+    .headerBlock
         - 
             let headerData = {
                 isAuth: false,
