--- a/src/components/burger/burger.scss
+++ b/src/components/burger/burger.scss
@@ -63,6 +63,21 @@
         border-radius: 4px;
         margin: 5px auto 0;
         border: 1px solid  rgba(31, 32, 65, 0.25);
+        padding-bottom: 10px;
+    }
+    &__name {
+        font-family: Montserrat, sans-serif;
+        font-size: 14px;
+        color: $dark50;
+        text-align: center;
+        &::before {
+            content: '';
+            display: block;
+            width: 50%;
+            margin: 0 auto;
+            height: 1px;
+            background-color: $dark25;
+        }
     }
     &__button {
         display: block;
