--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -5,6 +5,7 @@
 @import "../../components/header-navigation/header-navigation.scss";
 @import "../../components/button/button.scss";
 @import "../../components/burger/burger.scss";
+@import "../../components/footer/footer.scss";
 
 
 
