--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -6,7 +6,7 @@
 @import "../../components/button/button.scss";
 @import "../../components/burger/burger.scss";
 @import "../../components/footer/footer.scss";
-
+@import "../../components/footer-navigation/footer-navigation.scss";
 
 
 .headerBlock {
