--- a/src/common-styles/fonts.css
+++ b/src/common-styles/fonts.css
@@ -34,7 +34,19 @@
       url('../fonts/material-icons/material-icons-regular.woff') format('woff'),
       url('../fonts/material-icons/material-icons-regular.ttf') format('truetype');
   }
-  
+ 
+@font-face {
+  font-family: 'awesome-5-brands-regular-400';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/fa-brands/font-awesome-5-brands-regular-400.eot');
+  src: 
+    local('☺'), 
+    url('../fonts/fa-brands/font-awesome-5-brands-regular-400.ttf') format('truetype'),
+    url('../fonts/fa-brands/font-awesome-5-brands-regular-400.woff') format('woff');
+}
+
+
 .material-icons {
     font-family: 'material-icons';
     font-weight: normal;
