--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -7,6 +7,7 @@
 @import "../../components/burger/burger.scss";
 @import "../../components/footer/footer.scss";
 @import "../../components/footer-navigation/footer-navigation.scss";
+@import "../../components/social-icon/social-icon.scss";
 
 
 .headerBlock {
