--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -8,6 +8,7 @@
 @import "../../components/footer/footer.scss";
 @import "../../components/footer-navigation/footer-navigation.scss";
 @import "../../components/social-icon/social-icon.scss";
+@import "../../components/text-field/text-field.scss";
 
 
 .headerBlock {
